--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,13 @@
+body {
+  background: #f4f4f4;
+  color: #384045;
+}
+
 .App {
   height: 100%;
   width: 60%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+  // align-items: center;
 
   h1 {
     margin-top: 2rem;
